--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.2.2",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
